--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "truthlens",
-  "name": "truthlens",
+  "short_name": "Neutral Mirror",
+  "name": "Neutral Mirror",
   "icons": [
     {
       "src": "favicon.ico",
